[metadata]
name = pubsub_util
version = 0.0.1
author = Ivana Mance
author_email = ivana.mance@photomath.com
description = Util for subscribing or publishing messages to Google's PubSub topics
long_description = file: README.md
long_description_content_type = text/markdown
url = git@github.com:photomath/pubsub-util.git
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src